disable destroy for ansible
Change-Id: I123234dcacad9100a80692c9f5e8faa4ac718de2

--- a/ansible/files/instances.yaml.j2
+++ b/ansible/files/instances.yaml.j2
@@ -70,6 +70,7 @@ instances:
 {%- endfor %}
 
 global_configuration:
+  ENABLE_DESTROY: False
   CONTAINER_REGISTRY: "{{ CONTAINER_REGISTRY }}"
   REGISTRY_PRIVATE_INSECURE: True
 {% if K8S_YUM_REPO_URL %}
