set kolla_base_distro based on openstack version
zed and upper don't have centos based images

Change-Id: I5d35360bb4ed77c7d27c9621beae23c3e8b9405e

--- a/ansible/files/instances.yaml.j2
+++ b/ansible/files/instances.yaml.j2
@@ -124,7 +124,7 @@ kolla_config:
     enable_ironic: no
     enable_ironic_notifications: no
     openstack_service_workers: 1
-    kolla_base_distro: "centos"
+    kolla_base_distro: "{{ KOLLA_BASE_DISTRO }}"
     nova_logging_debug: "True"
     neutron_logging_debug: "True"
     heat_logging_debug: "True"
