juju: simplify bundles for k8s and maas
drop prefix for ubuntu and ntp charms
they are useless now

Change-Id: Ia5b76213c23ece7615f335e3751cfd96fcf612c7

--- a/juju/files/bundle_openstack_maas_ha.yaml.tmpl
+++ b/juju/files/bundle_openstack_maas_ha.yaml.tmpl
@@ -382,7 +382,7 @@ services:
   # misc
 
   ubuntu:
-    charm: "cs:{{ UBUNTU_SERIES }}/ubuntu"
+    charm: "ubuntu"
     num_units: 5
     bindings:
       "": *default-space
@@ -393,7 +393,7 @@ services:
       - "3"
       - "4"
   ntp:
-    charm: "cs:{{ UBUNTU_SERIES }}/ntp-41"
+    charm: "ntp"
 {%- if NTP_SERVERS %}
     options:
       source: "{{ NTP_SERVERS }}"
