--- a/juju/files/bundle_k8s.yaml.tmpl
+++ b/juju/files/bundle_k8s.yaml.tmpl
@@ -93,7 +93,7 @@ services:
 
   # misc
   ubuntu:
-    charm: "cs:{{ UBUNTU_SERIES }}/ubuntu"
+    charm: "ubuntu"
 {%- if ORCHESTRATOR == 'hybrid' %}
     num_units: {{ all_nodes | count + 1 }}
 {%- else %}
@@ -101,7 +101,7 @@ services:
 {%- endif %}
     to: {{ all_nodes }}
   ntp:
-    charm: "cs:{{ UBUNTU_SERIES }}/ntp-41"
+    charm: "ntp"
 {%- if NTP_SERVERS %}
     options:
       source: "{{ NTP_SERVERS }}"
