fix permisssion issue on redeploy with ansible
pass CONFIG_API_WORKER_COUNT to instances.yaml for ansible

Change-Id: I2ee70805aa316792a17101b0339adbd5b8b9b99f

--- a/ansible/files/instances.yaml.j2
+++ b/ansible/files/instances.yaml.j2
@@ -100,6 +100,9 @@ contrail_configuration:
 {%- if APPLY_DEFAULTS is defined and APPLY_DEFAULTS|length  %}
   APPLY_DEFAULTS: "{{ APPLY_DEFAULTS }}"
 {%- endif %}
+{%- if CONFIG_API_WORKER_COUNT is defined  %}
+  CONFIG_API_WORKER_COUNT: "{{ CONFIG_API_WORKER_COUNT }}"
+{%- endif %}
 
 {%- if ORCHESTRATOR in ['kubernetes', 'hybrid'] %}
   KUBERNETES_PUBLIC_FIP_POOL:
