tune CONFIG_API_WORKER_COUNT for ansible
Change-Id: I47e9be40ed81f28ad0f616a5f62d83fb4754e6e8

--- a/ansible/files/instances.yaml.j2
+++ b/ansible/files/instances.yaml.j2
@@ -97,10 +97,10 @@ contrail_configuration:
   ANALYTICSDB_ENABLE: "{{ LEGACY_ANALYTICS_ENABLE }}"
   ANALYTICS_ALARM_ENABLE: "{{ LEGACY_ANALYTICS_ENABLE }}"
   ANALYTICS_SNMP_ENABLE: "{{ LEGACY_ANALYTICS_ENABLE }}"
-{%- if APPLY_DEFAULTS is defined and APPLY_DEFAULTS|length  %}
+{%- if APPLY_DEFAULTS is defined and APPLY_DEFAULTS|length %}
   APPLY_DEFAULTS: "{{ APPLY_DEFAULTS }}"
 {%- endif %}
-{%- if CONFIG_API_WORKER_COUNT is defined  %}
+{%- if CONFIG_API_WORKER_COUNT is defined and CONFIG_API_WORKER_COUNT|length %}
   CONFIG_API_WORKER_COUNT: "{{ CONFIG_API_WORKER_COUNT }}"
 {%- endif %}
 
