pin ubuntu revision for juju charms
Change-Id: I6302511c4ae759d0f9f762dcac38bc8c25a01db8
Signed-off-by: tikitavi <rtikitavi@gmail.com>

--- a/juju/files/bundle_openstack.yaml.tmpl
+++ b/juju/files/bundle_openstack.yaml.tmpl
@@ -296,6 +296,8 @@ services:
 {%- else %}
     num_units: {{ all_nodes | count }}
 {%- endif %}
+    channel: stable
+    revision: 24
     to: {{ all_nodes }}
   ntp:
     charm: "ntp"
