--- a/juju/files/bundle_k8s.yaml.tmpl
+++ b/juju/files/bundle_k8s.yaml.tmpl
@@ -94,6 +94,7 @@ services:
   # misc
   ubuntu:
     charm: "ubuntu"
+    series: "{{ UBUNTU_SERIES }}"
 {%- if ORCHESTRATOR == 'hybrid' %}
     num_units: {{ all_nodes | count + 1 }}
 {%- else %}
