--- a/juju/files/bundle_openstack.yaml.tmpl
+++ b/juju/files/bundle_openstack.yaml.tmpl
@@ -291,6 +291,7 @@ services:
 
   ubuntu:
     charm: "ubuntu"
+    series: "{{ UBUNTU_SERIES }}"
 {%- if ORCHESTRATOR == 'hybrid' %}
     num_units: {{ all_nodes | count + 1 }}
 {%- else %}
