specify series of ntp charm
Change-Id: Icf17dcd2cd1e9a5fe6730e5e6161c8726459b702
Signed-off-by: tikitavi <rtikitavi@gmail.com>

--- a/juju/files/bundle_k8s.yaml.tmpl
+++ b/juju/files/bundle_k8s.yaml.tmpl
@@ -119,6 +119,7 @@ services:
     to: {{ all_nodes }}
   ntp:
     charm: "ntp"
+    series: "{{ UBUNTU_SERIES }}"
 {%- if NTP_SERVERS %}
     options:
       source: "{{ NTP_SERVERS }}"
