--- a/juju/files/bundle_openstack_maas_ha.yaml.tmpl
+++ b/juju/files/bundle_openstack_maas_ha.yaml.tmpl
@@ -394,6 +394,7 @@ services:
       - "4"
   ntp:
     charm: "ntp"
+    series: "{{ UBUNTU_SERIES }}"
 {%- if NTP_SERVERS %}
     options:
       source: "{{ NTP_SERVERS }}"
