specify series for easyrsa in tf bundle in juju
Change-Id: I7f0a421832a369a06292718df21c661985594aa0
Signed-off-by: tikitavi <rtikitavi@gmail.com>

--- a/juju/files/bundle_tf.yaml.tmpl
+++ b/juju/files/bundle_tf.yaml.tmpl
@@ -205,6 +205,8 @@ services:
 {%- if SSL_ENABLE.lower() == 'true' %}
   easyrsa:
     # this must be one in HA
+    series: "{{ UBUNTU_SERIES }}"
+    channel: 1.24/stable
     charm: easyrsa
     num_units: 1
     to:
