--- a/ansible/files/instances.yaml.j2
+++ b/ansible/files/instances.yaml.j2
@@ -126,6 +126,7 @@ contrail_configuration:
   KEYSTONE_AUTH_URL_VERSION: /v3
 kolla_config:
   kolla_globals:
+    openstack_logging_debug: "True"
     nova_compute_virt_type: "{{ VIRT_TYPE }}"
     enable_haproxy: no
     enable_ironic: no
